Custom style sheet added and layout problem solved

--- a/css/style.css
+++ b/css/style.css
@@ -342,6 +342,9 @@ header .brand-logo {
     font-size: 36px;
   }
 }
+nav .brand-logo{
+	padding-left:10px;
+}
 li.search-out:hover{
   background: transparent;
 }
